Fix: 기본 Navbar z-index 먹게 position 변경

--- a/najuha-fronted/src/components/navbar.css
+++ b/najuha-fronted/src/components/navbar.css
@@ -1,7 +1,8 @@
 #Navbar_wrapper {
   height: 16vh;
   border-bottom: none;
-  position: static;
+  position: relative;
+  z-index: 999;
   padding-top: 3vh;
   box-sizing: border-box;
 }
